<resources>

    <string name="app_name">Playlist Maker</string>


    <string name="app_header">Playlist maker</string>
    <string name="search_button">Поиск</string>
    <string name="medialibrary_button">Медиатека</string>
    <string name="settings_button">Настройки</string>


    <string name="settings_header">Настройки</string>
    <string name="settings_back_button_description">Вернуться назад</string>
    <string name="settings_switch_to_dark_theme">Тёмная тема</string>
    <string name="settings_share_app">Поделиться приложением</string>
    <string name="settings_support">Написать в поддержку</string>
    <string name="settings_user_agreement">Пользовательское соглашение</string>

    <string name="settings_share_app_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="settings_support_email">klava.tum@yandex.ru</string>
    <string name="settings_support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="settings_support_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="settings_user_agreement_link">https://yandex.ru/legal/practicum_offer/</string>


    <string name="search_header">Поиск</string>
    <string name="search_search_hint">Поиск</string>
    <string name="search_search_clear_text">Очистить поле ввода</string>

    <string name="search_info_no_data">Ничего не нашлось</string>
    <string name="search_info_no_network">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="search_no_network_update_button">Обновить</string>
    <string name="search_history_top_label">Вы искали</string>
    <string name="search_history_bottom_button">Очистить историю</string>

    <string name="media_initial_text">....</string>
    <string name="media_initial_time">00:00</string>

    <string name="media_details_duration">Длительность</string>
    <string name="media_details_album">Альбом</string>
    <string name="media_details_year">Год</string>
    <string name="media_details_genre">Жанр</string>
    <string name="media_details_country">Страна</string>
    <string name="title_activity_library">Library</string>

    <string name="media_library_header">Медиатека</string>
    <string name="media_library_tab_1_text">Избранные треки</string>
    <string name="media_library_tab_2_text">Плейлисты</string>

    <string name="media_library_playlists_tab_new_playlist">Новый плейлист</string>

    <string name="media_library_fav_songs_tab_the_library_is_empty">Ваша медиатека пуста</string>
    <string name="media_library_playlists_tab_no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="title_activity_frags_holder">PLMaker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="new_playlist_activity_image_cont_desc">Изображение для плейлиста</string>
    <string name="new_playlist_activity_name_edit_text_hint">Название*</string>
    <string name="new_playlist_activity_desc_edit_text_hint">Описание</string>
    <string name="new_playlist_activity_title"     >Новый плейлист</string>
    <string name="new_edit_playlist_activity_title">Редактировать</string>
    <string name="new_playlist_activity_create_button_caption"     >Создать</string>
    <string name="new_edit_playlist_activity_create_button_caption">Сохранить</string>

    <string name="new_playlist_activity_exit_dialog_title">Завершить создание плейлиста?</string>
    <string name="new_playlist_activity_exit_dialog_text">Все несохраненные данные будут потеряны!</string>
    <string name="new_playlist_activity_exit_dialog_cancel">Отмена</string>
    <string name="new_playlist_activity_exit_dialog_terminate">Завершить</string>

    <string name="edit_playlist_delete_track_title">Удалить трек</string>
    <string name="edit_playlist_delete_track_msg">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="edit_playlist_delete_track_cancel">Отмена</string>
    <string name="edit_playlist_delete_track_delete">Удалить</string>

    <string name="new_playlist_activity_created_pre_msg">Плейлист</string>
    <string name="new_playlist_activity_created_post_msg">создан</string>

    <string name="media_player_bottom_sheet_title">Добавить в плейлист</string>
    <string name="media_player_bottom_sheet_create_playlist">Новый плейлист</string>

    <string name="media_player_track_is_allready_in_playlist">Трек уже добавлен в плейлист</string>
    <string name="media_player_track_added_to_playlist">Добавлено в плейлист</string>

    <string name="edit_playlist_no_tracks">Вы не добавили\nни одного трека</string>
    <string name="edit_playlist_share_nothing_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>

    <string name="edit_playlist_bottom_sheet_button_share">Поделиться</string>
    <string name="edit_playlist_bottom_sheet_button_edit">Редактировать информацию</string>
    <string name="edit_playlist_bottom_sheet_button_delete">Удалить плейлист</string>

    <string name="edit_playlist_bottom_sheet_delete_title">Удалить плейлист</string>
    <string name="edit_playlist_bottom_sheet_delete_msg">Хотите удалить плейлист?</string>
    <string name="edit_playlist_bottom_sheet_delete_delete">Да</string>
    <string name="edit_playlist_bottom_sheet_delete_cancel">Нет</string>

    <string name="tracks_amount_string_form_a">трек</string>
    <string name="tracks_amount_string_form_b">трека</string>
    <string name="tracks_amount_string_form_c">треков</string>

    <string name="minutes_amount_string_form_a">минута</string>
    <string name="minutes_amount_string_form_b">минуты</string>
    <string name="minutes_amount_string_form_c">минут</string>

</resources>