<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android ="http://schemas.android.com/apk/res/android"
    xmlns:app     ="http://schemas.android.com/apk/res-auto"
    xmlns:tools   ="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:background="@color/search_screen_background">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_header_size">

        <!-- BIGGER CLICK AREA -->
        <FrameLayout
            android:id="@+id/search_go_back_button"

            android:layout_width="@dimen/search_header_size"
            android:layout_height="@dimen/search_header_size"
        />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"

            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"

            android:src="@drawable/back_icon"
            android:contentDescription="@string/settings_back_button_description"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="64dp"
            android:layout_marginTop="14dp"

            android:text="@string/search_header"
            android:textColor="@color/search_screen_header"
            style="@style/main_font"
        />
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_search_size">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/search_search_panel_height"

            android:layout_marginTop="@dimen/search_search_panel_margin_top"
            android:layout_marginStart="@dimen/search_search_panel_margin_side"
            android:layout_marginEnd="@dimen/search_search_panel_margin_side"

            android:outlineProvider="none"
            app:cardCornerRadius="@dimen/search_search_panel_corner_radius"
            android:backgroundTint="@color/search_screen_edit_text_background"
        >

            <ImageView
                android:elevation="2dp"
    
                android:layout_width="18dp"
                android:layout_height="16dp"
    
                android:layout_marginStart="14dp"
                android:layout_marginTop="10dp"
    
                android:src="@drawable/search"
                android:contentDescription="@string/search_search_hint"
                app:tint="@color/search_edit_text_hint"
            />
    
            <ImageView
                android:id="@+id/search_clear_edit_text_button"
                android:elevation="2dp"
                android:visibility="gone"
    
                android:layout_width="16dp"
                android:layout_height="16dp"
    
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
    
                android:src="@drawable/close"
                android:contentDescription="@string/search_search_clear_text"
                app:tint="@color/search_edit_text_hint"
            />

            <EditText
                android:id="@+id/search_edit_text"

                android:saveEnabled="false"

                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:padding="0dp"
                android:layout_marginStart="36dp"

                android:maxLines="1"
                android:inputType="text"

                android:fontFamily="@font/ys_display_regular"
                android:textSize="16sp"
                android:textFontWeight="400"

                android:textColor="@color/search_screen_edit_text_input"
                android:hint="@string/search_search_hint"
                android:textColorHint="@color/search_edit_text_hint"
                android:backgroundTint="@color/search_screen_edit_text_background"
            />

        </androidx.cardview.widget.CardView>

    </FrameLayout>

</LinearLayout>