<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/search_screen_background"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_header_size">

        <TextView
            style="@style/main_font"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginTop="10dp"
            android:text="@string/search_header"
            android:textColor="@color/search_screen_header" />
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_search_size">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/search_search_panel_height"

            android:layout_marginStart="@dimen/search_search_panel_margin_side"
            android:layout_marginTop="@dimen/search_search_panel_margin_top"
            android:layout_marginEnd="@dimen/search_search_panel_margin_side"

            android:backgroundTint="@color/search_screen_edit_text_background"
            android:outlineProvider="none"
            app:cardCornerRadius="@dimen/search_search_panel_corner_radius">

            <ImageView
                android:layout_width="18dp"

                android:layout_height="16dp"
                android:layout_marginStart="14dp"

                android:layout_marginTop="10dp"
                android:contentDescription="@string/search_search_hint"

                android:elevation="2dp"
                android:src="@drawable/search"
                app:tint="@color/search_edit_text_hint" />

            <ImageView
                android:id="@+id/search_clear_edit_text_button"
                android:layout_width="16dp"
                android:layout_height="16dp"

                android:layout_gravity="end"
                android:layout_marginTop="10dp"

                android:layout_marginEnd="10dp"
                android:contentDescription="@string/search_search_clear_text"
                android:elevation="2dp"

                android:src="@drawable/close"
                android:visibility="gone"
                app:tint="@color/search_edit_text_hint" />

            <EditText
                android:id="@+id/search_edit_text"

                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:layout_marginStart="36dp"

                android:backgroundTint="@color/search_screen_edit_text_background"
                android:fontFamily="@font/ys_display_regular"

                android:hint="@string/search_search_hint"

                android:imeOptions="actionDone"
                android:inputType="text"

                android:maxLines="1"
                android:padding="0dp"
                android:saveEnabled="false"

                android:textColor="@color/search_screen_edit_text_input"
                android:textColorHint="@color/search_edit_text_hint"
                android:textFontWeight="400"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <!-- PROGRESS BAR -->
        <ProgressBar
            android:id="@+id/search_progress_bar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="160dp"
            android:indeterminateTint="#3772E7"

            android:visibility="visible" />


        <!-- TRACKS -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


        <!-- NOTHING FOUND -->
        <FrameLayout
            android:id="@+id/search_no_data_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/no_data" />

                <TextView
                    style="@style/search_info_text"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"

                    android:layout_marginTop="136dp"
                    android:text="@string/search_info_no_data"
                    android:textAlignment="center"
                    android:textColor="@color/search_screen_header" />
            </FrameLayout>
        </FrameLayout>


        <!-- NETWORK ERROR -->
        <FrameLayout
            android:id="@+id/search_no_network_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/no_network" />

                <TextView
                    style="@style/search_info_text"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"

                    android:layout_marginTop="136dp"
                    android:text="@string/search_info_no_network"
                    android:textAlignment="center"
                    android:textColor="@color/search_screen_header" />

                <Button
                    android:id="@+id/no_network_update_button"

                    style="@style/search_info_button"
                    android:layout_width="96dp"

                    android:layout_height="36dp"

                    android:layout_gravity="center_horizontal"

                    android:layout_marginTop="248dp"
                    android:backgroundTint="@color/search_screen_header"

                    android:insetTop="0dp"
                    android:insetBottom="0dp"

                    android:text="@string/search_no_network_update_button"
                    android:textAppearance="@style/search_info_button"
                    android:textColor="@color/search_screen_background"
                    app:cornerRadius="54dp" />

            </FrameLayout>
        </FrameLayout>


        <!-- SEARCH HISTORY -->
        <LinearLayout
            android:id="@+id/search_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                style="@style/search_info_button"
                android:layout_width="match_parent"

                android:layout_height="@dimen/search_history_header_height"

                android:layout_weight="0"

                android:gravity="center"
                android:text="@string/search_history_top_label"
                android:textColor="@color/search_screen_header"
                android:textSize="@dimen/search_history_header_text_size" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/history_rView"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="1"

                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="40" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/search_history_clear_frame_height"

                android:layout_weight="0">

                <Button
                    android:id="@+id/clear_search_history"

                    style="@style/search_info_button"
                    android:layout_width="@dimen/search_history_clear_button_width"

                    android:layout_height="@dimen/search_history_clear_button_height"

                    android:layout_gravity="center"
                    android:backgroundTint="@color/search_screen_header"

                    android:insetTop="0dp"
                    android:insetBottom="0dp"

                    android:text="@string/search_history_bottom_button"
                    android:textColor="@color/search_screen_background"
                    app:cornerRadius="@dimen/search_history_clear_button_corner_radius" />
            </FrameLayout>

        </LinearLayout>


    </FrameLayout>
</LinearLayout>