<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/bottom_sheet_edit_playlist"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:background="@drawable/bottom_sheet"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:src="@drawable/bottom_sheet_handler" />


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/edit_image"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/edit_name"
                    style="@style/small_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="14dp"
                    android:text="PLAYLIST NAME"
                    android:textColor="@color/settings_screen_text" />

                <TextView
                    android:id="@+id/edit_number_of_tracks"
                    style="@style/even_smaller_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="34dp"
                    android:text="NUMBER OF TRACKS"
                    android:textColor="@color/icon_share" />

            </FrameLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/bottom_sheet_share"
            style="@style/small_font"
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/edit_playlist_bottom_sheet_button_share"
            android:gravity="center_vertical"
            android:textColor="@color/settings_screen_header" />

        <TextView
            android:id="@+id/bottom_sheet_edit"
            style="@style/small_font"
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            android:layout_marginStart="16dp"
            android:text="@string/edit_playlist_bottom_sheet_button_edit"
            android:gravity="center_vertical"
            android:textColor="@color/settings_screen_header" />

        <TextView
            android:id="@+id/bottom_sheet_delete"
            style="@style/small_font"
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            android:layout_marginStart="16dp"
            android:text="@string/edit_playlist_bottom_sheet_button_delete"
            android:gravity="center_vertical"
            android:textColor="@color/settings_screen_header" />

    </LinearLayout>

</merge>